# ComparaisonAssurance

./: .replit  README.md  pyproject.toml
attached_assets/: Pasted-I-m-working-on-a-CAC-Comparateur-Assurance-Client-project-that-compares-insurance-products-from-mu-1744368519359.txt
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/comparison/: engine.py  router.py  schemas.py  service.py
backend/app/integrations/hubspot/: client.py
backend/app/integrations/utwin/: client.py  models.py  schemas.py
backend/app/leads/: models.py  router.py  schemas.py  service.py
backend/app/projects/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py  service.py
frontend/: angular.json  package-lock.json  package.json  server.js  start-express.sh  start-simple.sh  start.sh
frontend/src/: index.html  polyfills.ts  styles.css
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  token.interceptor.ts
frontend/src/app/core/models/: comparison.model.ts  lead.model.ts  project.model.ts  user.model.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  comparison.service.ts  lead.service.ts  project.service.ts
frontend/src/app/features/auth/: auth.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+56 files in other folders)
